--- a/web_static/101-index.html
+++ b/web_static/101-index.html
@@ -153,7 +153,7 @@
 				<div class="number_rooms"><p>5 Room</p></div>
 				<div class="number_bathrooms"><p>5 Bathrooms</p></div>
 			</div>
-				<div class="user"><p><b>Owner</b>: Belaneh Kinde</p></div>
+				<div class="user"><p><b>Owner</b>: saefullah sadiq</p></div>
 				<div class="description"><p>Every booking includes free protection from Host cancellations, listing inaccuracies, and other issues like trouble checking in.</p>
 			</div>
 			<div class="amenities">
